# remote-gpio

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  fake-spi  install.sh  mise.toml  readme.md  release.toml  remote-gpio.sh  renovate.json  somfy-rts-local.toml  spec.md
.github/workflows/: check.yml  ci.yml  release.yml
app/: .oxfmtrc.json  README.md  biome.json  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.tsx  style.css  use-websocket.ts
app/src/components/ui/: button.tsx
app/src/hooks/: use-selection-events.ts  use-websocket.ts
app/src/lib/: access.ts  auth.ts
assets/: index.css  index.html  somfy-polkit.rules  somfy.service.tmpl
docs/: ARCHITECTURE.md  CLI_CONFIG_DESIGN.md  HAP-PLAN.md  HAP.md  HARDWARE.md  RTS_BACKEND.md  RTS_DRIVER.md  TODO.md  deploy-cli.md
examples/: render_unit.rs
hap-state/: hap.json  positions.json
homebridge/: .gitignore  README.md  config.schema.json  package.json  tsconfig.json
homebridge/src/: index.ts
scripts/: fake-pigpiod.py
src/: backend.rs  cli.rs  config.rs  controller.rs  core.rs  embed.rs  gpio.rs  lib.rs  logging.rs  main.rs  persist.rs  remote.rs  server.rs  systemd.rs  version.rs
src/backend/: fake.rs  mod.rs  rts.rs  telis.rs
src/commands/: config.rs  doctor.rs  homekit.rs  install.rs  logs.rs  mod.rs  qrcode.rs  remote.rs  restart.rs  rts.rs  serve.rs  uninstall.rs  upgrade.rs
src/commands/doctor/: check.rs  hardware.rs  mod.rs  systemd.rs  updates.rs
src/controller/: mod.rs  test_support.rs  tests.rs
src/core/: channel.rs  command.rs  mod.rs
src/deploy/: mod.rs  rts_prereqs.rs
src/driver/: fake.rs  mod.rs  rts.rs  telis.rs
src/hap/: accessories.rs  mdns.rs  mod.rs  pair_setup.rs  pair_verify.rs  positions.rs  qr.rs  runtime.rs  server.rs  session.rs  somfy.rs  srp.rs  state.rs  tlv.rs
src/hap/server/: handlers.rs  mod.rs  state.rs  transport.rs  types.rs
src/hap/server/handlers/: characteristics.rs  events.rs  mod.rs  pairing.rs
src/homekit/: accessory_db.rs  blinds.rs  characteristic.rs  config.rs  mod.rs  position_cache.rs  positions.rs  reads.rs  somfy.rs  target_writes.rs
src/positioning/: mod.rs  motion.rs  motion_tasks.rs  state.rs
src/rts/: cc1101.rs  frame.rs  mod.rs  pigpio.rs  state.rs  waveform.rs
src/service/: mod.rs
src/testing/: fixtures.rs  mod.rs
