[package]
name = "somfy"
version = "0.2.0"
edition = "2021"

[features]
default = ["fake"]
fake = []
telis = ["dep:gpiocdev"]
rts = []

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

clap = { version = "4.6", features = ["derive", "env"] }
rust-embed = { version = "8.11", features = ["mime-guess"] }
mime_guess = "2.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls-no-provider",
  "json",
  "stream",
  "http2",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.11"
hex = "0.4"
tempfile = "3.27"
nix = { version = "0.31", features = ["fs", "user"] }
semver = "1.0"
mdns-sd = { version = "0.19", default-features = false, features = ["async"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.13"
httparse = "1.10"
http = "1.4"
num-bigint = "0.4"
qrcode = { version = "0.14", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = { version = "0.8", features = ["uapi_v2", "async_tokio"], optional = true }

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "9.1", features = ["build"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
