[package]
name = "somfy"
version = "0.9.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "query",
  "tokio",
  "ws",
] }
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

clap = { version = "4.6", features = ["derive", "env"] }
rust-embed = { version = "8.11", features = ["mime-guess"] }
mime_guess = "2.0"
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls-no-provider",
  "json",
  "stream",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.11"
hex = "0.4"
tempfile = "3.27"
nix = { version = "0.31", features = ["fs", "user"] }
semver = "1.0"
mdns-sd = { version = "0.20", default-features = false, features = ["async"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.13"
httparse = "1.10"
http = "1.4"
num-bigint = "0.4"
qrcode = { version = "0.14", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = { version = "0.8", features = ["uapi_v2", "async_tokio"] }
spidev = { version = "0.7" }

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "9.1", features = ["build"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
